configuration template email  hbs

--- a/src/app/views/emails/cancellation.hbs
+++ b/src/app/views/emails/cancellation.hbs
@@ -1,8 +1,10 @@
-<strong>Ola, {{provider}}</strong>
-<p>Houve um cancelamento de horario, confira os detalhes abaixo:</p>
+<strong>Ola, {{ provider }}</strong>
 <p>
-  <strong>Cliente: </strong> {{user }} <br />
-  <strong>Data/hora: </strong> {{date}} <br />
+  Houve um cancelamento de horario, confira os detalhes abaixo:
+</p>
+<p>
+  <strong>Cliente: </strong> {{ user }} <br />
+  <strong>Data/hora: </strong> {{ date }} <br />
   <br />
   <small>
     O horário está novamente disponivel para novos agendamentos.
